--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -45,4 +45,15 @@
         android:text="0.0"
         android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/back_to_main_activity_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back to home"
+        android:layout_marginTop="50sp"
+        />
+
+
 </LinearLayout>
+
+
